--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -1,7 +1,260 @@
+</main>
 <footer class="footer">
-
+    <div class="container">
+        <div class="footer__container">
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <div class="footer__item_title">
+                        Каталог растений
+                    </div>
+                    <ul class="footer__item_slugs">
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Хвойные деревья
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Лиственные деревья
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Крупномеры
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Ниваки Кустарники
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Кустарники
+                            </a>
+                        </li>
+                    </ul>
+                    <a class="footer__logo" href="/">
+                        <img src="/img/logo.svg" alt="Ландшафтный дом">
+                    </a>
+                    <div class="footer__address">
+                        <div>
+                            Россия, г. Москва,
+                        </div>
+                        <div>
+                            ул. Садовая, д. 35
+                        </div>
+                    </div>
+                    <a class="footer__bottom">
+                        ЛАНДШАФТНЫЙ ДОМ 2012-2022 ® ©
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <div class="footer__item_title">
+                        Услуги
+                    </div>
+                    <ul class="footer__item_slugs">
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Ландшафтный дизайн
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Благоустройство
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Проектирование сада
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="">
+                                Реконструкция участка
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="footer__buttons">
+                        <button class="button footer__button">
+                            Скачать каталог
+                        </button>
+                        <button class="button footer__button">
+                            Реквизиты
+                        </button>
+                    </div>
+                    <a class="footer__bottom">
+                        Политика конфиденциальности
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <div class="footer__item_flex">
+                        <div class="footer__item_flex_inner">
+                            <div class="footer__item_title">
+                                Полезная информация
+                            </div>
+                            <ul class="footer__item_slugs">
+                                <li class="footer__item_slug">
+                                    <a href="">
+                                        Оплата
+                                    </a>
+                                </li>
+                                <li class="footer__item_slug">
+                                    <a href="">
+                                        Статьи
+                                    </a>
+                                </li>
+                                <li class="footer__item_slug">
+                                    <a href="">
+                                        FAQ
+                                    </a>
+                                </li>
+                                <li class="footer__item_slug">
+                                    <a href="">
+                                        Сертификаты
+                                    </a>
+                                </li>
+                                <li class="footer__item_slug">
+                                    <a href="">
+                                        Акции
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <ul class="footer__item_flex_inner footer__payment_systems">
+                            <li class="footer__payment_system">
+                                <img src="/img/mastercard.png" alt="MasterCard">
+                            </li>
+                            <li class="footer__payment_system">
+                                <img src="/img/visa.png" alt="Visa">
+                            </li>
+                            <li class="footer__payment_system">
+                                <img src="/img/union-pay.png" alt="UnionPay">
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="footer__bottom footer__socials">
+                        <li class="footer__social">
+                            <a href="">
+                                <img src="/img/vk-grey.png" alt="Вконтакте">
+                            </a>
+                        </li>
+                        <li class="footer__social">
+                            <a href="">
+                                <img src="/img/telegram-grey.png" alt="Телеграм">
+                            </a>
+                        </li>
+                        <li class="footer__social">
+                            <a href="">
+                                <img src="/img/whatsapp-grey.png" alt="Ватсап">
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer__item">
+                    <div class="footer__item_title">
+                        Связаться с нами:
+                    </div>
+                    <ul class="footer__item_slugs">
+                        <li class="footer__item_slug">
+                            <a href="">
+                                +7 (999) 910-00-32
+                            </a>
+                            <a href="">
+                                +7 (495) 000-00-00
+                            </a>
+                            <a href="">
+                                +7 (999) 909-00-00
+                            </a>
+                        </li>
+                        <li class="footer__item_slug">
+                            <a href="malito:landscapehouse@yandex.ru">
+                                landscapehouse@yandex.ru
+                            </a>
+                        </li>
+                    </ul>
+                    <button class="button footer__button footer__news_subscribe">
+                        Подписаться на новости
+                    </button>
+                    <a class="footer__bottom">
+                        Условия соглашения
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <ul class="footer__work-schedule">
+                        <li class="footer__work-schedule_item">
+                            <span>
+                                Понедельник
+                            </span>
+                            <span>
+                                09:00-19:00
+                            </span>
+                        </li>
+                        <li class="footer__work-schedule_item">
+                            <span>
+                                Вторник
+                            </span>
+                            <span>
+                                09:00-19:00
+                            </span>
+                        </li>
+                        <li class="footer__work-schedule_item">
+                            <span>
+                                Среда
+                            </span>
+                            <span>
+                                09:00-19:00
+                            </span>
+                        </li>
+                        <li class="footer__work-schedule_item">
+                            <span>
+                                Четверг
+                            </span>
+                            <span>
+                                09:00-19:00
+                            </span>
+                        </li>
+                        <li class="footer__work-schedule_item">
+                            <span>
+                                Пятница
+                            </span>
+                            <span>
+                                09:00-19:00
+                            </span>
+                        </li>
+                        <li class="footer__work-schedule_item">
+                            <span>
+                                Суббота
+                            </span>
+                            <span>
+                                Выходной
+                            </span>
+                        </li>
+                        <li class="footer__work-schedule_item">
+                            <span>
+                                Воскресенье
+                            </span>
+                            <span>
+                                Выходной
+                            </span>
+                        </li>
+                    </ul>
+                    <div class="footer__arrow-top">
+                        <img src="/img/arrow-top.svg" alt="Вверх">
+                    </div>
+                    <a class="footer__feedback" href="">
+                        <img src="/img/message.svg" alt="Связаться">
+                    </a>
+                    <a class="footer__bottom _black">
+                        Карта сайта
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </footer>
 </div>
+<script src="/js/all.js" defer></script>
 </body>
 
 </html>
