--- a/app/source/scss/UI/_button.scss
+++ b/app/source/scss/UI/_button.scss
@@ -3,6 +3,10 @@
 
     color: var(--second-color);
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     font-family: 'Helios';
     font-size: 1rem;
  
