--- a/app/source/scss/_root.scss
+++ b/app/source/scss/_root.scss
@@ -1,4 +1,7 @@
 :root {
    --first-color: #000;
    --second-color: #343434;
+   --third-color: #343434;
+   --fourth-color: #C4C4C4;
+   --line-color: #979FAA;
 }
