--- a/app/source/scss/layout/_header.scss
+++ b/app/source/scss/layout/_header.scss
@@ -1,11 +1,22 @@
 .header {
+    font-size: 1.125rem;
+
     &__container {
         display: flex;
+        justify-content: space-between;
+        column-gap: 10%;
+
+        padding-top: 3.125rem;
     }
 
     &__left {
         display: flex;
         align-items: center;
+        align-self: flex-start;
+        justify-content: space-between;
+        flex-grow: 1;
+
+        margin-top: -1.625rem;
     }
 
     &__navigation {
@@ -16,5 +27,58 @@
         &_href {
             color: var(--first-color);
         }
+    }
+
+    &__right {
+
+        &_top {
+            display: flex;
+            align-items: flex-start;
+            column-gap: 2.25rem;
+        }
+
+        &_bottom {
+            display: flex;
+            justify-content: flex-end;
+        }
+    }
+
+    &__socials {
+        display: flex;
+        grid-gap: inherit;
+    }
+
+    &__info {
+        display: flex;
+        flex-direction: column;
+        row-gap: 0.31rem;
+
+        &_bottom {
+            display: flex;
+            grid-gap: 1.25rem;
+        }
+    }
+
+    &__numbers {
+        display: flex;
+        flex-direction: column;
+        row-gap: 0.31rem;
+    }
+
+    &__number {
+        &_href {
+            color: var(--first-color);
+        }
+    }
+
+    &__city {
+        ._select__input {
+            font-size: 1.125rem;
+        }
+    }
+
+    &__order_call {
+        padding: 0.625rem 1.375rem;
+        margin-top: 1.87rem;
     }
 }
