--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -8,4 +8,15 @@
 html, body, .wrapper {
     font-family: 'Helios';
     font-size: 16px;
+
+    height: 100%;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex-grow: 1;
 }
