--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -45,9 +45,11 @@
                             ул. Садовая, д. 35
                         </div>
                     </div>
-                    <a class="footer__bottom">
-                        ЛАНДШАФТНЫЙ ДОМ 2012-2022 ® ©
-                    </a>
+                    <div class="footer__bottom">
+                        <a href="">
+                            ЛАНДШАФТНЫЙ ДОМ 2012-2022 ® ©
+                        </a>
+                    </div>
                 </li>
                 <li class="footer__item">
                     <div class="footer__item_title">
@@ -83,9 +85,11 @@
                             Реквизиты
                         </button>
                     </div>
-                    <a class="footer__bottom">
-                        Политика конфиденциальности
-                    </a>
+                    <div class="footer__bottom">
+                        <a href="">
+                            Политика конфиденциальности
+                        </a>
+                    </div>
                 </li>
                 <li class="footer__item">
                     <div class="footer__item_flex">
@@ -176,9 +180,11 @@
                     <button class="button footer__button footer__news_subscribe">
                         Подписаться на новости
                     </button>
-                    <a class="footer__bottom">
-                        Условия соглашения
-                    </a>
+                    <div class="footer__bottom">
+                        <a href="">
+                            Условия соглашения
+                        </a>
+                    </div>
                 </li>
                 <li class="footer__item">
                     <ul class="footer__work-schedule">
