--- a/app/source/scss/_root.scss
+++ b/app/source/scss/_root.scss
@@ -1,7 +1,6 @@
 :root {
    --first-color: #000;
    --second-color: #343434;
-   --third-color: #343434;
-   --fourth-color: #C4C4C4;
+   --third-color: #C4C4C4;
    --line-color: #979FAA;
 }
