--- a/app/source/scss/layout/_footer.scss
+++ b/app/source/scss/layout/_footer.scss
@@ -1,47 +1,63 @@
 .footer {
-    color: var(--third-color);
+    color: var(--second-color);
+
+    font-size: 1rem;
+
+    &__container {
+        padding: 6.25rem 0 1.87rem;
+    }
 
     &__list {
         display: flex;
+        grid-gap: 1rem 3.125rem;
+        justify-content: space-between;
     }
 
     &__item {
         display: flex;
         flex-direction: column;
-    }
+        align-items: flex-start;
 
-    &__item_title {
-        display: inline-block;
+        &_title {
+            display: inline-flex;
+            flex-direction: column;
+            row-gap: 0.625rem;
 
-        font-weight: bold;
+            font-weight: bold;
 
-        padding-bottom: 0.625rem;
-        margin-bottom: 2.5rem;
+            margin-bottom: 2.5rem;
 
-        &::after {
-            background: var(--line-color);
+            &::after {
+                background: var(--line-color);
 
-            content: "";
+                content: "";
 
-            display: inline-block;
+                display: inline-block;
 
-            width: 100%;
-            height: 1px;
+                width: 100%;
+                height: 1px;
+
+            }
         }
-    }
-    
-    &__item_slugs {
-        display: flex;
-        flex-direction: column;
-        row-gap: 1rem;
-    }
 
-    &__item_slug {
-        display: flex;
-        flex-direction: column;
+        &_slugs {
+            display: flex;
+            flex-direction: column;
+            row-gap: 1rem;
+        }
 
-        a {
-            color: var(--third-color); 
+        &_slug {
+            display: inline-flex;
+            flex-direction: column;
+
+            a {
+                color: var(--second-color);
+            }
+        }
+
+        &_flex {
+            display: flex;
+            column-gap: 3.75rem;
         }
     }
 
@@ -50,6 +66,9 @@
 
         margin-top: 6.25rem;
 
+        width: 5rem;
+        height: 5rem;
+
         img {
             width: 5rem;
             height: 5rem;
@@ -57,22 +76,38 @@
         }
     }
 
+    &__address {
+        margin-top: 1.87rem;
+    }
+
     &__bottom {
-        color: var(--fourth-color);
+        color: var(--third-color);
 
         display: flex;
         align-items: flex-end;
         flex-grow: 1;
 
-        &._black {
+        margin-top: 3.75rem;
+
+        a {
             color: var(--third-color);
+        }
+
+        &._black {
+            color: var(--second-color);
+
+            display: inline-block;
+
+            margin-left: auto;
         }
     }
 
-    &__buttons  {
+    &__buttons {
         display: flex;
         flex-direction: column;
         row-gap: 2.5rem;
+
+        margin-top: 6.25rem;
     }
 
     &__button {
@@ -80,8 +115,68 @@
         height: 2.5rem;
     }
 
-    &__work-schedule_item {
+    &__payment_systems {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        row-gap: 1.87rem;
+    }
+
+    &__socials {
+        display: flex;
+        column-gap: 2.5rem;
+    }
+
+    &__social {
+        display: inline-block;
+
+        a,
+        img {
+            display: inline-block;
+
+            width: 2.5rem;
+            min-width: 2.5rem;
+            height: 2.5rem;
+        }
+
+        a {
+            transform: translateY(35%);
+        }
+    }
+
+    &__news_subscribe {
+        margin-top: 9rem;
+    }
+
+    &__work-schedule {
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.25rem;
+
+        &_item {
+            display: flex;
+            justify-content: space-between;
+            column-gap: 3.75rem;
+        }
+    }
+
+    &__arrow-top {
+        margin-top: 2.75rem;
+        margin-left: auto;
+    }
+
+    &__feedback {
+        background-color: var(--second-color);
+
+        border-radius: 50%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        margin-left: auto;
+        margin-top: 2.125rem;
+
+        width: 5rem;
+        height: 5rem;
     }
 }
