--- a/app/source/scss/pages/main/_landscape-solutions.scss
+++ b/app/source/scss/pages/main/_landscape-solutions.scss
@@ -1,6 +1,8 @@
 .landscape-solutions {
     display: flex;
 
+    margin-bottom: 8rem;
+
     &__title_line {
         &::before {
             order: 2;
