--- a/app/source/scss/UI/_title.scss
+++ b/app/source/scss/UI/_title.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     row-gap: 0.75rem;
 
+    h2 {
+        font-size: inherit;
+    }
+
     &_line {
         display: flex;
         align-items: center;
