--- a/app/source/scss/_root.scss
+++ b/app/source/scss/_root.scss
@@ -2,6 +2,8 @@
    --first-color: #000;
    --second-color: #343434;
    --third-color: #C4C4C4;
+   --fourth-color: #FBFBFB;
+   --fifth-color: #FFF;
    --line-color: #979FAA;
    --line-second-color: #333;
 }
