--- a/app/source/scss/pages/main/_landscape.scss
+++ b/app/source/scss/pages/main/_landscape.scss
@@ -16,6 +16,7 @@
     &__center {
         display: flex;
         align-items: flex-end;
+        justify-content: center;
         column-gap: 11rem;
     }
 
