--- a/app/source/scss/UI/_button.scss
+++ b/app/source/scss/UI/_button.scss
@@ -1,5 +1,7 @@
 .button {
-    border: 1px solid var(--second-color) ;
+    background-color: transparent;
+
+    border: 1px solid var(--second-color);
 
     color: var(--second-color);
 
@@ -11,4 +13,12 @@
     font-size: 1rem;
  
     letter-spacing: 0.03em;
+}
+
+.button-second {
+    @extend .button;
+
+    background-color: var(--second-color);
+
+    color: var(--fifth-color);
 }
