--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -3,7 +3,7 @@
 @import './font/';
 @import './UI/';
 @import './layout/';
-@import './pages/';
+@import './sections/';
 
 html, body, .wrapper {
     font-family: 'Helios';
