--- a/app/source/scss/sections/index.scss
+++ b/app/source/scss/sections/index.scss
@@ -3,3 +3,6 @@
 @import './services';
 @import './consultation';
 @import './portfolio';
+@import './uniqueness';
+@import './video-section';
+@import './stages-work';
