--- a/app/source/scss/sections/_services.scss
+++ b/app/source/scss/sections/_services.scss
@@ -16,6 +16,8 @@
             margin-bottom: 0.93rem;
 
             img {
+                box-shadow: var(--img-shadow );
+
                 width: 100%;
             }
         }
