--- a/app/source/scss/_root.scss
+++ b/app/source/scss/_root.scss
@@ -6,4 +6,5 @@
    --fifth-color: #FFF;
    --line-color: #979FAA;
    --line-second-color: #333;
+   --img-shadow: 0 0.25rem 0.93rem rgba(0, 0, 0, 0.24);
 }
