--- a/app/source/scss/_root.scss
+++ b/app/source/scss/_root.scss
@@ -4,7 +4,9 @@
    --third-color: #C4C4C4;
    --fourth-color: #FBFBFB;
    --fifth-color: #FFF;
+   --sixth-color: rgba(0, 0, 0, 0.15);
    --line-color: #979FAA;
    --line-second-color: #333;
+   --first-background-color: #D9DFE5;
    --img-shadow: 0 0.25rem 0.93rem rgba(0, 0, 0, 0.24);
 }
