--- a/app/source/scss/sections/_substrate-form.scss
+++ b/app/source/scss/sections/_substrate-form.scss
@@ -3,6 +3,8 @@
     align-items: center;
     justify-content: flex-end;
 
+    margin-bottom: 14.25rem;
+
     &__title {
         margin-bottom: 2.625rem;
 
