--- a/app/source/scss/sections/_advantages.scss
+++ b/app/source/scss/sections/_advantages.scss
@@ -2,6 +2,7 @@
     background-color: var(--first-background-color);
 
     padding: 9rem 0;
+    margin-bottom: 12.5rem;
 
     &__container {
         display: flex;
