--- a/app/source/scss/sections/_portfolio.scss
+++ b/app/source/scss/sections/_portfolio.scss
@@ -59,7 +59,8 @@
 
         &_image {
             display: flex;
-
+            flex-grow: 1;
+            
             height: 100%;
 
             img {
