--- a/app/source/scss/sections/index.scss
+++ b/app/source/scss/sections/index.scss
@@ -1,6 +1,6 @@
 @import './landscape-solutions';
 @import './landscape';
-@import './services';
+@import './products';
 @import './consultation';
 @import './portfolio';
 @import './uniqueness';
@@ -9,3 +9,4 @@
 @import './substrate-form';
 @import './price';
 @import './advantages';
+@import './reviews';
