--- a/app/source/scss/sections/_consultation.scss
+++ b/app/source/scss/sections/_consultation.scss
@@ -2,6 +2,7 @@
     background-color: var(--fourth-color);
 
     padding: 6.75rem 0 6.5rem;
+    margin-bottom: 16.25rem;
 
     &__container {
         display: flex;
