--- a/app/source/scss/UI/_input.scss
+++ b/app/source/scss/UI/_input.scss
@@ -3,6 +3,8 @@
 
     border: 1px solid var(--second-color);
 
+    font-family: 'Helios';
+
     padding: 1.0625rem 1.25rem;
 
     transition: 200ms;
