--- a/app/source/scss/sections/_landscape.scss
+++ b/app/source/scss/sections/_landscape.scss
@@ -1,5 +1,5 @@
 .landscape {
-    margin-bottom: 11.625rem;
+    padding: 12.5rem 0 4.75rem;
 
     &__title {
         font-family: 'Posterama Text';
