--- a/app/source/scss/sections/_video-section.scss
+++ b/app/source/scss/sections/_video-section.scss
@@ -1,7 +1,7 @@
 .video-section {
     position: relative;
 
-    margin-bottom: 12.25rem ;
+    padding: 6.25rem 0;
 
     &__icon {
         position: absolute;
