--- a/app/source/scss/sections/index.scss
+++ b/app/source/scss/sections/index.scss
@@ -11,3 +11,6 @@
 @import './advantages';
 @import './reviews';
 @import './questions';
+@import './awards';
+@import './clients';
+@import './question-form';
