--- a/app/source/scss/sections/_advantages.scss
+++ b/app/source/scss/sections/_advantages.scss
@@ -1,8 +1,7 @@
 .advantages {
     background-color: var(--first-background-color);
 
-    padding: 9rem 0;
-    margin-bottom: 12.5rem;
+    padding: 9rem 0 8.25rem;
 
     &__container {
         display: flex;
