--- a/app/source/scss/sections/_substrate-form.scss
+++ b/app/source/scss/sections/_substrate-form.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: flex-end;
 
-    margin-bottom: 14.25rem;
+    padding: 1.5rem 0;
 
     &__title {
         margin-bottom: 2.625rem;
