--- a/app/source/scss/sections/_reviews.scss
+++ b/app/source/scss/sections/_reviews.scss
@@ -13,6 +13,8 @@
         &_inner {
             display: flex;
 
+            transition: 200ms;
+
             transform: translateX(var(--transform-x));
         }
     }
