--- a/app/source/scss/sections/_popular.scss
+++ b/app/source/scss/sections/_popular.scss
@@ -114,3 +114,11 @@
         }
     }
 }
+
+@media (max-width: 1024px) {
+    .popular {
+        &__item {
+            flex-basis: 50%;
+        }
+    }
+}
