--- a/app/source/scss/sections/_substrate-form.scss
+++ b/app/source/scss/sections/_substrate-form.scss
@@ -31,7 +31,9 @@
             }
 
             &:nth-child(2) {
-                transform: translate(-7.3rem, -0.6px);
+                transform: translate(-116.8px, -0.6px);
+
+                width: 100%;
             }
         }
     }
