--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -4,6 +4,7 @@
 @import './UI/';
 @import './layout/';
 @import './sections/';
+@import './helpers/';
 
 html, body, .wrapper {
     font-family: 'Helios';
