--- a/app/source/scss/UI/_title.scss
+++ b/app/source/scss/UI/_title.scss
@@ -21,7 +21,7 @@
     
             display: inline-block;
 
-            height: 3px;
+            height: 5px;
             width: 11.125rem;
         }
 
@@ -34,7 +34,7 @@
             flex-grow: 1;
 
             height: 1px;
-            width: auto;
+            width: 23rem;
         }
     }
     
