--- a/app/source/scss/sections/_products.scss
+++ b/app/source/scss/sections/_products.scss
@@ -54,7 +54,21 @@
         }
     }
 
+    &__buttons {
+        display: flex;
+        justify-content: center;
+        grid-gap: 1.87rem 3.125rem;
+
+        margin-top: 9.25rem;
+
+        button {
+            margin: 0;
+        }
+    }
+
     &__button {
+        font-size: 1.25rem;
+
         margin: 9.25rem auto 0;
 
         width: 19.375rem;
