--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -137,18 +137,18 @@
                             </li>
                         </ul>
                     </div>
-                    <ul class="footer__bottom footer__socials">
-                        <li class="footer__social">
+                    <ul class="footer__bottom footer__socials socials">
+                        <li class="footer__social social">
                             <a href="">
                                 <img src="/img/vk-grey.png" alt="Вконтакте">
                             </a>
                         </li>
-                        <li class="footer__social">
+                        <li class="footer__social social">
                             <a href="">
                                 <img src="/img/telegram-grey.png" alt="Телеграм">
                             </a>
                         </li>
-                        <li class="footer__social">
+                        <li class="footer__social social">
                             <a href="">
                                 <img src="/img/whatsapp-grey.png" alt="Ватсап">
                             </a>
