--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -27,12 +27,12 @@
                                         </a>
                                     </li>
                                     <li class="header__navigation_item">
-                                        <a class="header__navigation_href" href="">
+                                        <a class="header__navigation_href" href="/services.html">
                                             Услуги
                                         </a>
                                     </li>
                                     <li class="header__navigation_item">
-                                        <a class="header__navigation_href" href="">
+                                        <a class="header__navigation_href" href="/catalog.html">
                                             Магазин
                                         </a>
                                     </li>
@@ -52,7 +52,7 @@
                                         </a>
                                     </li>
                                     <li class="header__navigation_item">
-                                        <a class="header__navigation_href" href="">
+                                        <a class="header__navigation_href" href="/contacts.html">
                                             Контакты
                                         </a>
                                     </li>
