--- a/app/source/scss/sections/index.scss
+++ b/app/source/scss/sections/index.scss
@@ -16,3 +16,9 @@
 @import './question-form';
 @import './popular';
 @import './info';
+@import './shop-buttons';
+@import './comments';
+@import './related-articles';
+@import './article';
+@import './employee';
+@import './about';
