--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -22,7 +22,7 @@
                             <nav class="header__nav">
                                 <ul class="header__navigation">
                                     <li class="header__navigation_item">
-                                        <a class="header__navigation_href" href="">
+                                        <a class="header__navigation_href" href="/about.html">
                                             О компании
                                         </a>
                                     </li>
@@ -37,7 +37,7 @@
                                         </a>
                                     </li>
                                     <li class="header__navigation_item">
-                                        <a class="header__navigation_href" href="">
+                                        <a class="header__navigation_href" href="/portfolio.html">
                                             Портфолио
                                         </a>
                                     </li>
@@ -47,7 +47,7 @@
                                         </a>
                                     </li>
                                     <li class="header__navigation_item">
-                                        <a class="header__navigation_href" href="">
+                                        <a class="header__navigation_href" href="/blog.html">
                                             Блог
                                         </a>
                                     </li>
